fixed some spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
 }
 
 aside {
-  background: black;
   width: 30%;
   display: inline-block;
 }
